tests/prsl/fixtures/invalid/bad-enum.prsl
begin-record
record bad-enum {
  content : "x";
  operational-metadata {
    execution-state : foobar;
  };
}
end-record
---
